--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "devDependencies": {
     "@parcel/transformer-posthtml": "^2.8.3",
     "@parcel/transformer-sass": "^2.8.3",
-    "parcel": "^2.8.3"
+    "parcel": "^2.8.3",
+    "sharp": "^0.31.3"
   },
   "name": "exercicio_landing_page_evento",
   "version": "1.0.0",
